--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,25 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-
   <name>lambda-calculus</name>
-  <url>http://maven.apache.org</url>
+
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>fully.qualified.MainClass</mainClass>
+            </manifest>
+          </archive>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
